This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.7.5.3
  Use PO files for translations (generate RC-files from PO-files)
  Add Portuguese translation (#1756364)
  BugFix: Fix MakeResDll crash (#1795421)
  BugFix: Full screen mode didn't work with multiple monitors (#1788168)
  BugFix: PgUp key didn't do anything in beginning of the file (#1795680)
  Translation updates:
  - Japanese (r4546)

WinMerge 2.7.5.2 (r4528)
  Graphical improvements to location pane (#1770175)
  Remove MFC dependency from resource compiler (#1783581)
  Better multi-monitor support (split file view on monitor boundary) (#1788168)
  BugFix: Renaming unique item (only other side) renamed parent folder (#1787816)
  BugFix: Goto didn't change the active pane when selecting another pane (#1791351)
  Translation updates:
  - Traditional Chinese (r4473)

WinMerge 2.7.5.1
  HTML reports for file compare (#1739209)
  Ask confirmation when exiting with multiple windows open (#1757800)
  Translation updates:
  - Catalan (r4370)
  - Simplified Chinese (r4369)
  - Danish (r4360)
  - French (r4383)
  - Russian (r4421)
  - Slovak (r4413)
  - Swedish (r4412)

WinMerge 2.7.4 and earlier (also 2.6.x stable releases)
 See Changes.txt files in /Src and other folders.