@@ -8,6 +8,8 @@ WinMerge 2.7.5.3
   BugFix: Fix MakeResDll crash (#1795421)
   BugFix: Full screen mode didn't work with multiple monitors (#1788168)
   BugFix: PgUp key didn't do anything in beginning of the file (#1795680)
+  BugFix: The option 'Automatically scroll to first difference' didn't work
+  properly when word-wrap mode was on (#1795814)
   Translation updates:
   - Japanese (r4546)
 
